# nu_plugin_hashes

./: Cargo.toml  README.md  build.rs
src/: hasher.rs
