[package]
name = "nu_plugin_hashes"
description = "A Nushell plugin that adds 62 cryptographic hash functions from Hashes project"
keywords = ["nu", "plugin", "hash"]
categories = ["algorithms"]
repository = "https://github.com/ArmoredPony/nu_plugin_hashes"
license = "MIT"
version = "0.2.0"
edition = "2021"

[features]
default = [
    "ascon-hash",
    "belt-hash",
    # "blake2",
    "blake3",
    "fsb",
    "gost94",
    "groestl",
    "jh",
    "md2",
    "md4",
    "ripemd",
    "sha1",
    "sha2",
    "sha3",
    "shabal",
    "skein",
    "sm3",
    "streebog",
    "tiger",
    "whirlpool",
]

[dependencies]
nu-cmd-base = "0.112.2"
nu-plugin = "0.112.2"
nu-protocol = "0.112.2"
digest = "0.11.3"
ascon-hash = { version = "0.4.0", optional = true }
belt-hash = { version = "0.2.1", optional = true }
blake2 = { version = "0.10.6", optional = true }
blake3 = { version = "1.8.5", optional = true, default-features = false, features = [
    "std",
    "traits-preview",
] }
fsb = { version = "0.2.0", optional = true }
gost94 = { version = "0.11.0", optional = true }
groestl = { version = "0.11.0", optional = true }
jh = { version = "0.2.0", optional = true }
md2 = { version = "0.11.0", optional = true }
md4 = { version = "0.11.0", optional = true }
ripemd = { version = "0.2.0", optional = true }
sha1 = { version = "0.11.0", optional = true }
sha2 = { version = "0.11.0", optional = true }
sha3 = { version = "0.11.0", optional = true }
shabal = { version = "0.5.0", optional = true }
skein = { version = "0.2.0", optional = true }
sm3 = { version = "0.5.0", optional = true }
streebog = { version = "0.11.0", optional = true }
tiger = { version = "0.3.0", optional = true }
whirlpool = { version = "0.11.0", optional = true }

[build-dependencies]
digest = "0.11.3"
ascon-hash = { version = "0.4.0", optional = true }
belt-hash = { version = "0.2.1", optional = true }
blake2 = { version = "0.10.6", optional = true }
blake3 = { version = "1.8.5", optional = true, default-features = false, features = [
    "std",
    "traits-preview",
] }
fsb = { version = "0.2.0", optional = true }
gost94 = { version = "0.11.0", optional = true }
groestl = { version = "0.11.0", optional = true }
jh = { version = "0.2.0", optional = true }
md2 = { version = "0.11.0", optional = true }
md4 = { version = "0.11.0", optional = true }
ripemd = { version = "0.2.0", optional = true }
sha1 = { version = "0.11.0", optional = true }
sha2 = { version = "0.11.0", optional = true }
sha3 = { version = "0.11.0", optional = true }
shabal = { version = "0.5.0", optional = true }
skein = { version = "0.2.0", optional = true }
sm3 = { version = "0.5.0", optional = true }
streebog = { version = "0.11.0", optional = true }
tiger = { version = "0.3.0", optional = true }
whirlpool = { version = "0.11.0", optional = true }

[dev-dependencies]
nu-plugin-test-support = "0.112.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
